# ProCamp2021Project.py

./: .dockerignore  .gitignore  Dockerfile  README.md  hello.html  init_repo.sh  pyproject.toml  pytest.ini  requirements.txt
config/: .gitignore.py  Dockerfile  config.py  config.yaml  logger.py  prod.yaml  settings.py  user_factory.py  webdriver_factory.py
config/Jenkinsfile/grid/: docker_compose.yaml
config/Jenkinsfile/run/: Jenkinsfile
config/Jenkinsfile/scheduler/: Jenkinsfile
config/Sheduler/run/: Jenkinsfile
config/Sheduler/scheduler/: Jenkinsfile.js
config/envs/: __init__.py  config.yaml  dev.js  dev.yaml  local.js  prod.js  prod.yaml  qa.js
config/readers/: fromEnv.py  fromYaml.py
config/utils/: __init__.py  decorator.py  utils.py
data/service/db/: basespace.api_client.py
idea/httpRequests/: 2021-05-28T110710.404.html  2021-05-28T110831.200.html  http-client-cookies  http-requests-log.http
sheduler/run/: Jenkinsfile
sheduler/scheduler/: Jenkinsfile
src/applications/: __init__.py
src/applications/api/: base_request.py  conftest.py
src/applications/api_clients/: basespace_api_client.py  web_app_api_client.py
src/applications/cli/: conftest.py  cosmosid_cli.py
src/applications/helpers/: faker.py  golden_file_parser.py  string_convertor.py
src/applications/service/: emailbox_provider.py
src/service_providers/: browsers.provider.py  cache_provider.py  conftest.py  emailbox_provider.py  file.py  storage_provider.py
src/tests/: conftest.py
src/tests_data/: conftest.py  test_data.json
src/utils/: utils.py
(+23 files in other folders)
