[project]
name = "cosmosID_pyproject"
version = "0.1.0"
description = "Create a pyproject.toml file for an existing project."
authors = [
    "Anzhela Potapchuk <info@anzhelap-gl.de>"
]
license = "MIT"
readme = "README.md"
python = "^3.6"
homepage = "https://github.com/apotapchuk/"
repository = "https://github.com/apotapchuk/ProCamp2021Project.py"
documentation = "https://github.com/apotapchuk/infer_pyproject"

keywords = ["packaging", "dependency", "infer", "pyproject.toml"]

classifiers = [
    "Topic :: Software Development"
]

# Requirements
[dependencies]
Click = "^7.0"

[dev-dependencies]
black = { version = "^18.3-alpha.0", python = "^3.6" }

[scripts]
poetry = "infer_pyproject.cli:main"

[build-system]
requires = [
    "setuptools >= 35.0.2",
    "setuptools_scm >= 2.0.0, <3"
]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target_version = ['py36']

